--- a/Config.xcconfig
+++ b/Config.xcconfig
@@ -28,20 +28,18 @@
 
 
 // Product Version, PLEASE CHANGE HERE to affect all targets
-MARKETING_VERSION = 0.8.0
+MARKETING_VERSION = 1.3.5
 // Build number, PLEASE CHANGE HERE to affect all targets
-CURRENT_PROJECT_VERSION = 7
+CURRENT_PROJECT_VERSION = 1
 
 // Architectures
-ARCHS = arm64 armv7 x86_64 x86_64h i386
-EXCLUDED_ARCHS[sdk=iphonesimulator*] = arm64
-EXCLUDED_ARCHS[sdk=macosx*] = i386
+ARCHS = arm64 x86_64 x86_64h
 SUPPORTED_PLATFORMS = iphoneos iphonesimulator macosx
 
 // Deployment
 TARGETED_DEVICE_FAMILY = 1,2,6
-IPHONEOS_DEPLOYMENT_TARGET = 9.0
-MACOSX_DEPLOYMENT_TARGET = 10.10
+IPHONEOS_DEPLOYMENT_TARGET = 14.0
+MACOSX_DEPLOYMENT_TARGET = 10.15
 
 // else
-SWIFT_VERSION = 4.0
+SWIFT_VERSION = 5.3
